updated demo page

--- a/demo/index.html
+++ b/demo/index.html
@@ -156,6 +156,36 @@
       </div>
 
       <div class="dtm-grid-row dtm-section">
+        <div class="dtm-grid-cell cell-span4 cell-offset2">
+          <div class="dtm-cell-body">
+            <h4>Social Buttons</h4>
+            <div>Clicking on links "Social" event will be dispatched.</div>
+          </div>
+        </div>
+        <div class="dtm-grid-cell cell-span4">
+          <div class="dtm-cell-body">
+            <div>
+              <b>twitter buttons</b>
+              <script type="text/javascript"
+                      src="//platform.twitter.com/widgets.js"></script>
+              <a href="//twitter.com/share" class="twitter-share-button"
+                 data-lang="en">Tweet</a>
+              <a href="//twitter.com/vpodk" class="twitter-follow-button"
+                 data-show-count="false" data-lang="en">Follow @vpodk</a>
+            </div>
+            <div>
+              <b>LinkedIn Buttons</b>
+              <script type="text/javascript"
+                      src="//platform.linkedin.com/in.js"></script>
+              <script type="IN/Share" data-counter="right"></script>
+              <script type="IN/FollowCompany" data-id="6442972"
+                      data-counter="right"></script>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="dtm-grid-row dtm-section">
         <div class="dtm-grid-cell cell-span8 cell-offset2">
           <div class="dtm-cell-body">
 
@@ -193,33 +223,6 @@ s.tl = function(lnk, linkType, linkName) {
   console.log('Adobe TagLoader', s);
 };
 </script>
-
-
-<fieldset>
-  <legend>Twitter Buttons</legend>
-  <!--script>
-  window.twttr = (function (d,s,id) {
-    var t, js, fjs = d.getElementsByTagName(s)[0];
-    if (d.getElementById(id)) return; js=d.createElement(s); js.id=id;
-    js.src="//platform.twitter.com/widgets.js"; fjs.parentNode.insertBefore(js, fjs);
-    return window.twttr || (t = { _e: [], ready: function(f){ t._e.push(f) } });
-  }(document, "script", "twitter-wjs"));
-  </script-->
-  <script type="text/javascript" src="//platform.twitter.com/widgets.js"></script>
-  <a href="//twitter.com/share" class="twitter-share-button"
-     data-lang="en">Tweet</a>
-  <a href="//twitter.com/vpodk" class="twitter-follow-button"
-     data-show-count="false" data-lang="en">Follow @vpodk</a>
-</fieldset>
-<div>&nbsp;</div>
-
-<fieldset>
-  <legend>LinkedIn Buttons</legend>
-  <script type="text/javascript" src="//platform.linkedin.com/in.js"></script>
-  <script type="IN/Share" data-counter="right"></script>
-  <script type="IN/FollowCompany" data-id="6442972" data-counter="right"></script>
-</fieldset>
-<div>&nbsp;</div>
 
 <fieldset>
   <legend>Facebook Buttons</legend>
