--- a/demo/index.html
+++ b/demo/index.html
@@ -165,7 +165,7 @@
         <div class="dtm-grid-cell cell-span4">
           <div class="dtm-cell-body">
             <div>
-              <b>twitter buttons</b>
+              <b>Twitter</b>
               <script type="text/javascript"
                       src="//platform.twitter.com/widgets.js"></script>
               <a href="//twitter.com/share" class="twitter-share-button"
@@ -174,12 +174,30 @@
                  data-show-count="false" data-lang="en">Follow @vpodk</a>
             </div>
             <div>
-              <b>LinkedIn Buttons</b>
+              <b>LinkedIn</b>
               <script type="text/javascript"
                       src="//platform.linkedin.com/in.js"></script>
               <script type="IN/Share" data-counter="right"></script>
               <script type="IN/FollowCompany" data-id="6442972"
                       data-counter="right"></script>
+            </div>
+            <div>
+              <div id="fb-root"></div>
+              <b>Facebook</b>
+              <script type="text/javascript" id="facebook-jssdk"
+                      src="//connect.facebook.net/en_US/sdk.js#xfbml=1&amp;version=v2.3&amp;appId=367159160142267&amp;status=1&amp;cookie=1">
+              </script>
+              <div class="fb-like" data-href="http://datamart.github.io/Komito/"
+                   data-layout="button" data-action="like" data-show-faces="false"
+                   data-share="false"></div>
+              <div class="fb-share-button"
+                   data-href="http://datamart.github.io/Komito/"></div>
+              <div class="fb-send" data-href="http://datamart.github.io/Komito/"
+                   data-colorscheme="light"></div>
+              <div class="fb-follow"
+                   data-href="http://datamart.github.io/Komito/"
+                   data-colorscheme="light"
+                   data-layout="button" data-show-faces="false"></div>
             </div>
           </div>
         </div>
@@ -224,23 +242,6 @@ s.tl = function(lnk, linkType, linkName) {
 };
 </script>
 
-<fieldset>
-  <legend>Facebook Buttons</legend>
-  <div id="fb-root"></div>
-  <script type="text/javascript" id="facebook-jssdk"
-          src="//connect.facebook.net/en_US/sdk.js#xfbml=1&amp;version=v2.3&amp;appId=367159160142267&amp;status=1&amp;cookie=1">
-  </script>
-  <div class="fb-like" data-href="http://datamart.github.io/Komito/"
-       data-layout="button" data-action="like" data-show-faces="false"
-       data-share="false"></div>
-  <div class="fb-share-button" data-href="http://datamart.github.io/Komito/"></div>
-  <div class="fb-send" data-href="http://datamart.github.io/Komito/"
-       data-colorscheme="light"></div>
-  <div class="fb-follow" data-href="http://datamart.github.io/Komito/"
-       data-colorscheme="light"
-       data-layout="button" data-show-faces="false"></div>
-</fieldset>
-<div>&nbsp;</div>
 
           </div><!--/dtm-cell-body-->
         </div><!--/dtm-grid-cell-->
