--- a/demo/index.html
+++ b/demo/index.html
@@ -69,12 +69,18 @@
             <div>If link is a Social Network, "Social" event will be dispatched too.</div>
           </div>
         </div>
-        <div class="dtm-grid-cell cell-span4">
+        <div class="dtm-grid-cell cell-span2">
           <div class="dtm-cell-body">
             <ul>
               <li><a target="_blank" href="http://dtm.io/">Datamart</a></li>
               <li><a target="_blank" href="//www.linkedin.com/company/datamartinc">LinkedIn</a></li>
               <li><a target="_blank" href="//www.facebook.com/datamartinc">Facebook</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="dtm-grid-cell cell-span2">
+          <div class="dtm-cell-body">
+            <ul>
               <li><a target="_blank" href="//plus.google.com/+ValentinP">Google+</a></li>
               <li><a target="_blank" href="//twitter.com/vpodk">Twitter</a></li>
               <li><a target="_blank" href="//analytics.blogspot.com/">Blogger</a></li>
