--- a/demo/index.html
+++ b/demo/index.html
@@ -64,6 +64,25 @@
       <div class="dtm-grid-row dtm-section">
         <div class="dtm-grid-cell cell-span4 cell-offset2">
           <div class="dtm-cell-body">
+            <h4>Scroll</h4>
+            <div>Scrolling page "Scroll" event will be dispatched.</div>
+          </div>
+        </div>
+        <div class="dtm-grid-cell cell-span4">
+          <div class="dtm-cell-body">
+            <ul>
+              <li><a href="javascript:window.scrollBy(0, document.documentElement.scrollHeight * 0.25);">Scroll 25%</a></li>
+              <li><a href="javascript:window.scrollBy(0, document.documentElement.scrollHeight * 0.5);">Scroll 50%</a></li>
+              <li><a href="javascript:window.scrollBy(0, document.documentElement.scrollHeight * 0.75);">Scroll 75%</a></li>
+              <li><a href="javascript:window.scrollBy(0, document.documentElement.scrollHeight);">Scroll 100%</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <div class="dtm-grid-row dtm-section">
+        <div class="dtm-grid-cell cell-span4 cell-offset2">
+          <div class="dtm-cell-body">
             <h4>Outbound Links</h4>
             <div>Clicking on links "Outbound" event will be dispatched.</div>
             <div>If link is a Social Network, "Social" event will be dispatched too.</div>
