updated demo page

--- a/demo/index.html
+++ b/demo/index.html
@@ -71,10 +71,10 @@
         <div class="dtm-grid-cell cell-span4">
           <div class="dtm-cell-body">
             <ul>
-              <li><a href="javascript:window.scrollBy(0, document.documentElement.scrollHeight * 0.25);">Scroll 25%</a></li>
-              <li><a href="javascript:window.scrollBy(0, document.documentElement.scrollHeight * 0.5);">Scroll 50%</a></li>
-              <li><a href="javascript:window.scrollBy(0, document.documentElement.scrollHeight * 0.75);">Scroll 75%</a></li>
-              <li><a href="javascript:window.scrollBy(0, document.documentElement.scrollHeight);">Scroll 100%</a></li>
+              <li><a href="javascript:window.scrollTo(0, document.documentElement.scrollHeight * 0.25);">Scroll 25%</a></li>
+              <li><a href="javascript:window.scrollTo(0, document.documentElement.scrollHeight * 0.5);">Scroll 50%</a></li>
+              <li><a href="javascript:window.scrollTo(0, document.documentElement.scrollHeight * 0.75);">Scroll 75%</a></li>
+              <li><a href="javascript:window.scrollTo(0, document.documentElement.scrollHeight);">Scroll 100%</a></li>
             </ul>
           </div>
         </div>
