updated demo page

--- a/demo/index.html
+++ b/demo/index.html
@@ -64,6 +64,23 @@
       <div class="dtm-grid-row dtm-section">
         <div class="dtm-grid-cell cell-span4 cell-offset2">
           <div class="dtm-cell-body">
+            <h4>Print</h4>
+            <div>Clicking on links "Print" event will be dispatched.</div>
+          </div>
+        </div>
+        <div class="dtm-grid-cell cell-span4">
+          <div class="dtm-cell-body">
+            <ul>
+              <li><a href="javascript:window.print()">Print</a></li>
+              <li>Ctrl+P / Cmd+P</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <div class="dtm-grid-row dtm-section">
+        <div class="dtm-grid-cell cell-span4 cell-offset2">
+          <div class="dtm-cell-body">
             <h4>Scroll</h4>
             <div>Scrolling page "Scroll" event will be dispatched.</div>
           </div>
