updated demo page

--- a/demo/index.html
+++ b/demo/index.html
@@ -160,8 +160,8 @@
         <div class="dtm-grid-cell cell-span4">
           <div class="dtm-cell-body">
             <ul>
-              <li><a href="mailto:hr@dtm.io">mailto:hr@dtm.io</a></li>
-              <li><a href="mailto:komito-support@dtm.io?subject=Support">mailto:komito-support@dtm.io?subject=Support</a></li>
+              <li><a href="mailto:komito-support@dtm.io">mailto:komito-support@dtm.io</a></li>
+              <li><a href="mailto:hr@dtm.io?subject=Resume">mailto:hr@dtm.io?subject=Resume</a></li>
               <li><a href="tel:+14157997500">tel:+14157997500</a></li>
               <li><a href="sms:+14157997500">sms:+14157997500</a></li>
               <li><a href="skype:datamart.company?call">skype:datamart.company?call</a></li>
