updated demo page

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
             title="Komito overview page.">Overview</a></li>
           <li><a href="/Komito/integration/"
             title="Step-by-step Komito integration instructions.">Integration</a></li>
+          <li><a href="/Komito/demo/" title="Komito demo page.">Demo</a></li>
         </ul>
       </nav>
     </div>
