--- a/integration/index.html
+++ b/integration/index.html
@@ -39,10 +39,10 @@
     <div class="dtm-grid-cell cell-span6">
       <nav>
         <ul class="dtm-nav">
-          <li><a href="/Komito/"
-            title="Komito overview page.">Overview</a></li>
+          <li><a href="/Komito/" title="Komito overview page.">Overview</a></li>
           <li class="dtm-nav-main-current"><a href="/Komito/integration/"
             title="Step-by-step Komito integration instructions.">Integration</a></li>
+          <li><a href="/Komito/demo/" title="Komito demo page.">Demo</a></li>
         </ul>
       </nav>
     </div>
