updated demo page

--- a/demo/index.html
+++ b/demo/index.html
@@ -203,6 +203,23 @@
         </div>
       </div>
 
+
+      <div class="dtm-grid-row dtm-section">
+        <div class="dtm-grid-cell cell-span4 cell-offset2">
+          <div class="dtm-cell-body">
+            <h4>Media</h4>
+            <div>"Media" event will be dispatched.</div>
+          </div>
+        </div>
+        <div class="dtm-grid-cell cell-span4">
+          <div class="dtm-cell-body">
+            <iframe width="100%" height="315"
+                    src="https://www.youtube.com/embed/ibj2k4lCf-Q"
+                    frameborder="0" allowfullscreen></iframe>
+          </div>
+        </div>
+      </div>
+
       <div class="dtm-grid-row dtm-section">
         <div class="dtm-grid-cell cell-span4 cell-offset2">
           <div class="dtm-cell-body">
