updated demo page

--- a/demo/index.html
+++ b/demo/index.html
@@ -216,6 +216,8 @@
             <iframe width="100%" height="315"
                     src="https://www.youtube.com/embed/ibj2k4lCf-Q"
                     frameborder="0" allowfullscreen></iframe>
+            <video style="width: 100%; height: 315px;transform: none;"
+                   src="blob:https%3A//www.youtube.com/6e6e53a1-694f-483a-b8bc-dcc80492871a"></video>
           </div>
         </div>
       </div>
