updated demo page

--- a/demo/index.html
+++ b/demo/index.html
@@ -216,8 +216,11 @@
             <iframe width="100%" height="315"
                     src="https://www.youtube.com/embed/ibj2k4lCf-Q"
                     frameborder="0" allowfullscreen></iframe>
-            <video style="width: 100%; height: 315px;transform: none;"
-                   src="https://www.youtube.com/6e6e53a1-694f-483a-b8bc-dcc80492871a"></video>
+            <video controls="">
+              <source src="http://www.quirksmode.org/html5/videos/big_buck_bunny.mp4"
+                      type="video/mp4">
+              <p>Your browser does not support H.264/MP4.</p>
+            </video>
           </div>
         </div>
       </div>
