updated demo page

--- a/demo/index.html
+++ b/demo/index.html
@@ -205,17 +205,14 @@
 
 
       <div class="dtm-grid-row dtm-section">
-        <div class="dtm-grid-cell cell-span4 cell-offset2">
+        <div class="dtm-grid-cell cell-span8 cell-offset2">
           <div class="dtm-cell-body">
             <h4>Media</h4>
             <div>"Media" event will be dispatched.</div>
-          </div>
-        </div>
-        <div class="dtm-grid-cell cell-span4">
-          <div class="dtm-cell-body">
-            <iframe width="100%" height="315"
+
+            <!--iframe width="100%" height="315"
                     src="https://www.youtube.com/embed/ibj2k4lCf-Q"
-                    frameborder="0" allowfullscreen></iframe>
+                    frameborder="0" allowfullscreen></iframe-->
             <video controls>
               <source src="http://www.quirksmode.org/html5/videos/big_buck_bunny.mp4"
                       type="video/mp4">
