updated demo page

--- a/demo/index.html
+++ b/demo/index.html
@@ -213,7 +213,7 @@
             <!--iframe width="100%" height="315"
                     src="https://www.youtube.com/embed/ibj2k4lCf-Q"
                     frameborder="0" allowfullscreen></iframe-->
-            <video controls>
+            <video controls="" style="width:100%">
               <source src="http://www.quirksmode.org/html5/videos/big_buck_bunny.mp4"
                       type="video/mp4">
               <p>Your browser does not support H.264/MP4.</p>
