updated demo page

--- a/demo/index.html
+++ b/demo/index.html
@@ -61,7 +61,7 @@
         </div>
       </div>
 
-      <div class="dtm-grid-row dtm-section">
+      <div class="dtm-grid-row dtm-section odd">
         <div class="dtm-grid-cell cell-span4 cell-offset2">
           <div class="dtm-cell-body">
             <h4>Print</h4>
@@ -103,7 +103,7 @@
         </div>
       </div>
 
-      <div class="dtm-grid-row dtm-section">
+      <div class="dtm-grid-row dtm-section odd">
         <div class="dtm-grid-cell cell-span4 cell-offset2">
           <div class="dtm-cell-body">
             <h4>Outbound Links</h4>
@@ -150,7 +150,7 @@
         </div>
       </div>
 
-      <div class="dtm-grid-row dtm-section">
+      <div class="dtm-grid-row dtm-section odd">
         <div class="dtm-grid-cell cell-span4 cell-offset2">
           <div class="dtm-cell-body">
             <h4>Call To Action Links</h4>
@@ -204,7 +204,7 @@
       </div>
 
 
-      <div class="dtm-grid-row dtm-section">
+      <div class="dtm-grid-row dtm-section odd">
         <div class="dtm-grid-cell cell-span4 cell-offset2">
           <div class="dtm-cell-body">
             <h4>Media</h4>
@@ -274,7 +274,7 @@
         </div>
       </div>
 
-      <div class="dtm-grid-row dtm-section">
+      <div class="dtm-grid-row dtm-section odd">
         <div class="dtm-grid-cell cell-span8 cell-offset2">
           <div class="dtm-cell-body">
             <p>&nbsp;<p>
