--- a/demo/index.html
+++ b/demo/index.html
@@ -21,7 +21,7 @@
 <!--[if lte IE 8]><style type="text/css">.dtm-grid,.dtm-header,.dtm-footer{min-width: 1140px;}</style><![endif]-->
 <!--[if lte IE 7]><style type="text/css">.dtm-grid-row{overflow:hidden;}</style><![endif]-->
 </head>
-<body class="dtm-page-komito dtm-product">
+<body class="dtm-page-komito dtm-product demo">
 <input type="checkbox" id="dtm-nav-mobile" style="display:none;">
 <div class="dtm-grid">
   <div class="dtm-grid-row dtm-header">
