--- a/demo/index.html
+++ b/demo/index.html
@@ -219,7 +219,10 @@
             <video controls="" style="width:100%">
               <source src="http://www.quirksmode.org/html5/videos/big_buck_bunny.mp4"
                       type="video/mp4">
-              <p>Your browser does not support H.264/MP4.</p>
+              <source src="http://www.quirksmode.org/html5/videos/big_buck_bunny.webm"
+                      type="video/webm">
+              <source src="http://www.quirksmode.org/html5/videos/big_buck_bunny.ogv"
+                      type="video/ogg">
             </video>
           </div>
         </div>
