updated demo page

--- a/demo/index.html
+++ b/demo/index.html
@@ -271,7 +271,7 @@
                      data-href="http://datamart.github.io/Komito/"
                      data-colorscheme="light"
                      data-layout="button" data-show-faces="false"></div>
-                <div id="fb-root"></div>
+                <div id="fb-root" class="fb_reset"></div>
               </li>
             </ul>
           </div>
