--- a/demo/index.html
+++ b/demo/index.html
@@ -136,6 +136,7 @@
           <div class="dtm-cell-body">
             <h4>Download Links</h4>
             <div>Clicking on links "Download" event will be dispatched.</div>
+            <div>If link is in other domain, "Outbound" event will be dispatched too.</div>
           </div>
         </div>
         <div class="dtm-grid-cell cell-span4">
