updated demo page

--- a/demo/index.html
+++ b/demo/index.html
@@ -39,8 +39,7 @@
     <div class="dtm-grid-cell cell-span6">
       <nav>
         <ul class="dtm-nav">
-          <li><a href="/Komito/"
-            title="Komito overview page.">Overview</a></li>
+          <li><a href="/Komito/" title="Komito overview page.">Overview</a></li>
           <li><a href="/Komito/integration/"
             title="Step-by-step Komito integration instructions.">Integration</a></li>
           <li class="dtm-nav-main-current"><a href="/Komito/demo/"
