updated demo page

--- a/demo/index.html
+++ b/demo/index.html
@@ -12,9 +12,9 @@
 <meta itemprop="image" content="http://datamart.github.io/Komito/images/komito-logo-120x90.png">
 <meta name="twitter:card" content="summary">
 <meta name="twitter:site" content="@vpodk">
-<meta name="twitter:url" content="http://datamart.github.io/Komito/">
-<meta itemprop="url" content="http://datamart.github.io/Komito/">
-<link rel="canonical" href="http://datamart.github.io/Komito/">
+<meta name="twitter:url" content="http://datamart.github.io/Komito/demo">
+<meta itemprop="url" content="http://datamart.github.io/Komito/demo">
+<link rel="canonical" href="http://datamart.github.io/Komito/demo">
 <link href="/Komito/favicon.ico" rel="shortcut icon">
 <link href="http://www.dtm.io/shared/assets/compiled-shared.css" rel="stylesheet">
 <link href="/Komito/styles.css" rel="stylesheet">
