updated demo page

--- a/demo/index.html
+++ b/demo/index.html
@@ -49,7 +49,7 @@
     </div>
   </div>
 
-  <div class="dtm-grid">
+  <!--div class="dtm-grid"-->
     <div class="dtm-content">
 
       <div class="dtm-grid-row dtm-section">
@@ -286,7 +286,7 @@
         </div><!--/dtm-grid-cell-->
       </div><!--/dtm-grid-row-->
     </div><!--/dtm-content-->
-  </div><!--/dtm-grid-->
+  <!--/div--><!--/dtm-grid-->
 
   <div class="dtm-grid-row dtm-footer">
     <div class="dtm-grid-cell cell-span8 cell-offset2">
