--- a/demo/index.html
+++ b/demo/index.html
@@ -214,7 +214,7 @@
           <!--iframe width="100%" height="315"
                   src="https://www.youtube.com/embed/ibj2k4lCf-Q"
                   frameborder="0" allowfullscreen></iframe-->
-          <video controls="" style="outline:0; transform:none; width:100%;">
+          <video controls="" style="outline:0; transform:translateZ(0); width:100%;">
             <source src="http://www.quirksmode.org/html5/videos/big_buck_bunny.mp4"
                     type="video/mp4">
             <source src="http://www.quirksmode.org/html5/videos/big_buck_bunny.webm"
