Added youtube player.

--- a/demo/index.html
+++ b/demo/index.html
@@ -222,6 +222,8 @@
             <source src="http://www.quirksmode.org/html5/videos/big_buck_bunny.ogv"
                     type="video/ogg">
           </video>
+          <iframe width="560" height="315" frameborder="0" allowfullscreen
+                  src="https://www.youtube.com/embed/aqz-KE-bpKQ"></iframe>
         </div>
       </div>
     </div>
