--- a/demo/index.html
+++ b/demo/index.html
@@ -214,7 +214,8 @@
           <!--iframe width="100%" height="315"
                   src="https://www.youtube.com/embed/ibj2k4lCf-Q"
                   frameborder="0" allowfullscreen></iframe-->
-          <video controls="" style="outline:0; transform:translateZ(0); width:100%;">
+          <video style="margin:1em 0;outline:0;transform:translateZ(0);width:100%;"
+                 controls>
             <source src="http://www.quirksmode.org/html5/videos/big_buck_bunny.mp4"
                     type="video/mp4">
             <source src="http://www.quirksmode.org/html5/videos/big_buck_bunny.webm"
@@ -222,7 +223,8 @@
             <source src="http://www.quirksmode.org/html5/videos/big_buck_bunny.ogv"
                     type="video/ogg">
           </video>
-          <iframe width="560" height="315" frameborder="0" allowfullscreen
+          <iframe style="margin:0 0 1em;outline:0;transform:translateZ(0);width:100%;"
+                  frameborder="0" allowfullscreen
                   src="https://www.youtube.com/embed/aqz-KE-bpKQ"></iframe>
         </div>
       </div>
