Updated youtube player.

--- a/demo/index.html
+++ b/demo/index.html
@@ -211,11 +211,7 @@
       </div>
       <div class="dtm-grid-cell cell-span4">
         <div class="dtm-cell-body">
-          <!--iframe width="100%" height="315"
-                  src="https://www.youtube.com/embed/ibj2k4lCf-Q"
-                  frameborder="0" allowfullscreen></iframe-->
-          <video style="margin:1em 0;outline:0;transform:translateZ(0);width:100%;"
-                 controls>
+          <video controls>
             <source src="http://www.quirksmode.org/html5/videos/big_buck_bunny.mp4"
                     type="video/mp4">
             <source src="http://www.quirksmode.org/html5/videos/big_buck_bunny.webm"
@@ -223,8 +219,7 @@
             <source src="http://www.quirksmode.org/html5/videos/big_buck_bunny.ogv"
                     type="video/ogg">
           </video>
-          <iframe style="margin:0 0 1em;outline:0;transform:translateZ(0);width:100%;"
-                  frameborder="0" allowfullscreen
+          <iframe class="video" frameborder="0" allowfullscreen
                   src="https://www.youtube.com/embed/aqz-KE-bpKQ"></iframe>
         </div>
       </div>
