Updated twitter tracking.

--- a/demo/index.html
+++ b/demo/index.html
@@ -243,6 +243,7 @@
                  data-lang="en">Tweet</a>
               <a href="//twitter.com/vpodk" class="twitter-follow-button"
                  data-show-count="false" data-lang="en">Follow @vpodk</a>
+              <a href="//twitter.com/intent/tweet?text=Hello%20world">Tweet</a>
             </li>
             <li>
               <b>LinkedIn</b>
