Updated twitter tracking.

--- a/integration/index.html
+++ b/integration/index.html
@@ -70,7 +70,7 @@
       <span class="str">'trackDownloads'</span>: 1, <span class="com">// Tracks files download links.</span>
       <span class="str">'trackOutbound'</span>: 1,  <span class="com">// Tracks outbound links.</span>
       <span class="str">'trackForms'</span>: 1,     <span class="com">// Tracks forms submissions.</span>
-      <span class="str">'trackUsers'</span>: 1,     <span class="com">// Tracks users logged in to social networks.</span>
+      <span class="str">'trackUsers'</span>: 1,     <span class="com">// Tracks pageviews by users logged in to social networks.</span>
       <span class="str">'trackActions</span>': 1,   <span class="com">// Tracks 'mailto', 'tel', 'sms' and 'skype' actions.</span>
       <span class="str">'trackPrint'</span>: 1,     <span class="com">// Tracks page print actions.</span>
       <span class="str">'trackMedia'</span>: 1,     <span class="com">// Tracks HTML5 video, audio and YouTube players events.</span>
@@ -141,7 +141,7 @@
             <div>• <samp>trackForms</samp> Tracks submitted forms.</div>
 
             <h4>Logged in Users</h4>
-            <div>• <samp>trackUsers</samp> Tracks users logged in to social networks.</div>
+            <div>• <samp>trackUsers</samp> Tracks pageviews by users logged in to social networks.</div>
             <div><i>Supported social networks:</i> Facebook, Google+, Twitter.</div>
 
             <h4>Call to action links</h4>
