--- a/integration/index.html
+++ b/integration/index.html
@@ -189,15 +189,15 @@
             </div>
           </div>
           <div class="dtm-grid-cell cell-span8">
-            <div class="dtm-cell-body dtm-copyright">
-            <p style="text-align:right;margin-top:.8em">
-              Komito is subject to the terms and conditions of
-              <a href="http://www.apache.org/licenses/LICENSE-2.0"
-                 rel="nofollow"
-                 title="Apache License">Apache License 2.0</a>
-              <br>© 2015 <a href="http://dtm.io"
-                title="Datamart Inc.">Datamart Inc.</a>
-            </p>
+            <div class="dtm-cell-body">
+              <p style="text-align:right;margin-top:.8em">
+                Komito is subject to the terms and conditions of
+                <a href="http://www.apache.org/licenses/LICENSE-2.0"
+                   rel="nofollow"
+                   title="Apache License">Apache License 2.0</a>
+                <br>© 2015 <a href="http://dtm.io"
+                  title="Datamart Inc.">Datamart Inc.</a>
+              </p>
             </div>
           </div>
         </div>
