Updated integration page.

--- a/integration/index.html
+++ b/integration/index.html
@@ -136,6 +136,10 @@
               LinkedIn, MySpace, VKontakte, Odnoklassniki, Xing, YouTube, Twoo,
               Reddit, Pinterest, Digg, Foursquare.
             </div>
+            <div>Also recognizes <a target="_blank" rel="nofollow"
+              href="https://dev.twitter.com/web/intents">Twitter web intents</a>
+              links.
+            </div>
 
             <h4>Forms</h4>
             <div>• <samp>trackForms</samp> Tracks submitted forms.</div>
