Updated integration page.

--- a/integration/index.html
+++ b/integration/index.html
@@ -160,6 +160,14 @@
             <h4>Scroll</h4>
             <div>• <samp>trackScroll</samp> Tracks scroll depth.</div>
 
+            <h4>Debugging</h4>
+            <div>• <samp>debugMode</samp> Prints all requests to console.</div>
+            <div>
+              <i>Note:</i> For production sites, you can enable
+              <samp>debugMode</samp>by adding <samp>debug=1</samp>
+              query parameter to current page URL.
+            </div>
+
             <p>&nbsp;</p>
         </div>
       </div>
