--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html xmlns="http://www.w3.org/1999/xhtml" itemscope
       itemtype="http://schema.org/WebPage">
 <head>
-<title itemprop="name">Komito at a Glance</title>
-<meta name="og:title" content="Komito at a Glance">
+<title itemprop="name">Komito Analytics at a Glance</title>
+<meta name="og:title" content="Komito Analytics at a Glance">
 <meta http-equiv="content-type" content="text/html; charset=utf-8">
 <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
-<meta name="description" content="Komito is an enhancement for the most popular analytics software.">
-<meta name="og:description" content="Komito is an enhancement for the most popular analytics software.">
+<meta name="description" content="Komito Analytics is an enhancement for the most popular analytics software.">
+<meta name="og:description" content="Komito Analytics is an enhancement for the most popular analytics software.">
 <meta name="og:image" content="http://datamart.github.io/Komito/images/komito-logo-600x455.png">
 <meta itemprop="image" content="http://datamart.github.io/Komito/images/komito-logo-120x90.png">
 <meta name="twitter:card" content="summary">
@@ -29,9 +29,9 @@
       <div class="dtm-cell-body dtm-logo">
         <a href="/Komito/"
            class="dtm-ext-logo"
-           title="Komito"><img
+           title="Komito Analytics"><img
            src="/Komito/images/komito-logo-48x48.png"
-           alt="Komito"><span><b>Komito</b><i>by Datamart</i></span></a>
+           alt="Komito Analytics"><span><h1>Komito Analytics</h1><i>by Datamart</i></span></a>
         <label for="dtm-nav-mobile" class="dtm-nav-mobile"><span
                class="dtm-nav-lines"></span></label>
       </div>
@@ -40,10 +40,10 @@
       <nav>
         <ul class="dtm-nav">
           <li class="dtm-nav-main-current"><a href="/Komito/"
-            title="Komito overview page.">Overview</a></li>
+            title="Komito Analytics overview page.">Overview</a></li>
           <li><a href="/Komito/integration/"
-            title="Step-by-step Komito integration instructions.">Integration</a></li>
-          <li><a href="/Komito/demo/" title="Komito demo page.">Demo</a></li>
+            title="Step-by-step Komito Analytics integration instructions.">Integration</a></li>
+          <li><a href="/Komito/demo/" title="Komito Analytics demo page.">Demo</a></li>
         </ul>
       </nav>
     </div>
@@ -54,10 +54,11 @@
       <div class="dtm-grid-row dtm-section">
         <div class="dtm-grid-cell cell-span8 cell-offset2">
           <div class="dtm-cell-body">
-            <h1>Komito at a Glance</h1>
+            <h1>Komito Analytics at a Glance</h1>
             <p class="txt-desc">
-              Komito is an enhancement for the most popular analytics software.<br>
-              It unlocks power of digital analytics with additional insights
+              <b>Komito Analytics</b> is an enhancement for the most popular
+              <b>analytics</b> software.<br>It unlocks power of
+              <b>digital analytics</b> with additional insights
               about visitor's behavior.
             </p>
           </div>
@@ -75,7 +76,7 @@
               <li>Social widgets</li>
             </ul>
             <a href="/Komito/integration/" class="kc-features"
-               title="See all Komito advanced mertics."><i>See all metrics</i> →</a>
+               title="See all Komito Analytics advanced mertics."><i>See all metrics</i> →</a>
           </div>
         </div>
         <div class="dtm-grid-cell cell-span3">
@@ -101,7 +102,7 @@
         <div class="dtm-grid-cell cell-span8 cell-offset2">
           <div class="dtm-cell-body">
             <p class="txt-desc" style="text-align:center">
-              • Caring about privacy and security, Komito
+              • Caring about privacy and security, Komito Analytics
               <b>does not store</b> any data.
             </p>
           </div>
@@ -110,10 +111,10 @@
 
       <div class="dtm-grid-row dtm-section dtm-dtv-dwn">
         <div class="dtm-grid-cell cell-span8 cell-offset2">See <a
-             title="See step-by-step Komito integration instructions."
+             title="See step-by-step Komito Analytics integration instructions."
              href="/Komito/integration/">integration instructions</a>
              &nbsp;-OR-&nbsp; &nbsp;<a
-             title="For all questions, suggestions, and comments, please contact Komito support team."
+             title="For all questions, suggestions, and comments, please contact Komito Analytics support team."
              class="dtm-button clr-red"
              href="mailto:komito-support@dtm.io"><span>
              Ask support team</span></a>
@@ -143,7 +144,7 @@
           <div class="dtm-grid-cell cell-span8">
             <div class="dtm-cell-body">
               <p style="text-align:right;margin-top:.8em">
-                Komito is subject to the terms and conditions of
+                Komito Analytics is subject to the terms and conditions of
                 <a href="http://www.apache.org/licenses/LICENSE-2.0"
                    rel="nofollow"
                    title="Apache License">Apache License 2.0</a>
