updated demo page

--- a/demo/index.html
+++ b/demo/index.html
@@ -2,12 +2,12 @@
 <html xmlns="http://www.w3.org/1999/xhtml" itemscope
       itemtype="http://schema.org/WebPage">
 <head>
-<title itemprop="name">Komito demo page</title>
-<meta name="og:title" content="Komito demo page">
+<title itemprop="name">Komito Analytics demo page</title>
+<meta name="og:title" content="Komito Analytics demo page">
 <meta http-equiv="content-type" content="text/html; charset=utf-8">
 <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
-<meta name="description" content="Komito is an enhancement for the most popular analytics software.">
-<meta name="og:description" content="Komito is an enhancement for the most popular analytics software.">
+<meta name="description" content="Komito Analytics is an enhancement for the most popular analytics software.">
+<meta name="og:description" content="Komito Analytics is an enhancement for the most popular analytics software.">
 <meta name="og:image" content="http://datamart.github.io/Komito/images/komito-logo-600x455.png">
 <meta itemprop="image" content="http://datamart.github.io/Komito/images/komito-logo-120x90.png">
 <meta name="twitter:card" content="summary">
@@ -29,9 +29,9 @@
       <div class="dtm-cell-body dtm-logo">
         <a href="/Komito/"
            class="dtm-ext-logo"
-           title="Komito"><img
+           title="Komito Analytics"><img
            src="/Komito/images/komito-logo-48x48.png"
-           alt="Komito"><span><b>Komito</b><i>by Datamart</i></span></a>
+           alt="Komito Analytics"><span><h1>Komito Analytics</h1><i>by Datamart</i></span></a>
         <label for="dtm-nav-mobile" class="dtm-nav-mobile"><span
                class="dtm-nav-lines"></span></label>
       </div>
@@ -39,11 +39,11 @@
     <div class="dtm-grid-cell cell-span6">
       <nav>
         <ul class="dtm-nav">
-          <li><a href="/Komito/" title="Komito overview page.">Overview</a></li>
+          <li><a href="/Komito/" title="Komito Analytics overview page.">Overview</a></li>
           <li><a href="/Komito/integration/"
-            title="Step-by-step Komito integration instructions.">Integration</a></li>
+            title="Step-by-step Komito Analytics integration instructions.">Integration</a></li>
           <li class="dtm-nav-main-current"><a href="/Komito/demo/"
-            title="Komito demo page.">Demo</a></li>
+            title="Komito Analytics demo page.">Demo</a></li>
         </ul>
       </nav>
     </div>
@@ -307,7 +307,7 @@
           <div class="dtm-grid-cell cell-span8">
             <div class="dtm-cell-body">
               <p style="text-align:right;margin-top:.8em">
-                Komito is subject to the terms and conditions of
+                Komito Analytics is subject to the terms and conditions of
                 <a href="http://www.apache.org/licenses/LICENSE-2.0"
                    rel="nofollow"
                    title="Apache License">Apache License 2.0</a>
