updated integration page

--- a/integration/index.html
+++ b/integration/index.html
@@ -79,7 +79,7 @@
     };
   <span class="tag">&lt;/script&gt;</span></pre></code>
 
-          <h3 id="features">Komito configuration parameters:</h3>
+          <h3 id="features">Komito Analytics configuration parameters:</h3>
             <h4>Social Interaction:</h4>
             <div>
               • <samp>trackTwitter</samp> Tracks <a target="_blank" rel="nofollow"
@@ -130,7 +130,7 @@
             <div>
               • <samp>trackOutbound</samp> Tracks all outbound links.
             </div>
-            <div><br>Komito recognizes outbound links to social networks
+            <div><br>Komito Analytics recognizes outbound links to social networks
               and lists those in the social report as well.</div>
             <div><i>Supported social networks:</i> Google+, Blogger, Facebook, Twitter,
               LinkedIn, MySpace, VKontakte, Odnoklassniki, Xing, YouTube, Twoo,
@@ -177,7 +177,7 @@
         <a title="Get Komito Analytics Source Code."
            class="dtm-button clr-red"
            target="_blank"
-           href="//github.com/Datamart/Komito/tree/master"><span>Get Komito Analytics Source Code</span></a>
+           href="//github.com/Datamart/Komito/tree/master"><span>Get Source Code</span></a>
       </div>
     </div>
   </div>
