--- a/integration/index.html
+++ b/integration/index.html
@@ -20,6 +20,7 @@
 <link href="/Komito/styles.css" rel="stylesheet">
 <!--[if lte IE 8]><style type="text/css">.dtm-grid,.dtm-header,.dtm-footer{min-width: 1140px;}</style><![endif]-->
 <!--[if lte IE 7]><style type="text/css">.dtm-grid-row{overflow:hidden;}</style><![endif]-->
+<script>if('https:'==location.protocol)location.replace(location.href.replace('https:','http:'))</script>
 </head>
 <body class="dtm-page-komito dtm-product">
 <input type="checkbox" id="dtm-nav-mobile" style="display:none;">
