--- a/demo/index.html
+++ b/demo/index.html
@@ -196,7 +196,8 @@
             </div>
             <div class="dtm-form-item">
               <button type="submit"
-                      class="dtm-button clr-red"><span>Submit</span></button>
+                      style="padding:9px 15px 10px"
+                      class="dtm-button clr-red">Submit</button>
             </div>
           </form>
         </div>
@@ -212,7 +213,7 @@
       </div>
       <div class="dtm-grid-cell cell-span4">
         <div class="dtm-cell-body">
-          <video controls>
+          <video width="460" height="260" controls>
             <source src="http://www.quirksmode.org/html5/videos/big_buck_bunny.mp4"
                     type="video/mp4">
             <source src="http://www.quirksmode.org/html5/videos/big_buck_bunny.webm"
@@ -220,8 +221,12 @@
             <source src="http://www.quirksmode.org/html5/videos/big_buck_bunny.ogv"
                     type="video/ogg">
           </video>
-          <iframe class="video" frameborder="0" allowfullscreen
-                  src="https://www.youtube.com/embed/aqz-KE-bpKQ"></iframe>
+          <iframe src="https://www.youtube.com/embed/aqz-KE-bpKQ"
+                  width="460" height="260" frameborder="0"
+                  webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+          <iframe src="https://player.vimeo.com/video/1084537"
+                  width="460" height="260" frameborder="0"
+                  webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
         </div>
       </div>
     </div>
@@ -239,7 +244,7 @@
             <li>
               <b>Twitter</b>
               <script type="text/javascript"
-                      src="//platform.twitter.com/widgets.js"></script>
+                      src="http://platform.twitter.com/widgets.js"></script>
               <a href="//twitter.com/share" class="twitter-share-button"
                  data-lang="en">Tweet</a>
               <a href="//twitter.com/vpodk" class="twitter-follow-button"
@@ -250,7 +255,7 @@
             <li>
               <b>LinkedIn</b>
               <script type="text/javascript"
-                      src="//platform.linkedin.com/in.js"></script>
+                      src="http://platform.linkedin.com/in.js"></script>
               <script type="IN/Share" data-counter="right"></script>
               <script type="IN/FollowCompany" data-id="6442972"
                       data-counter="right"></script>
@@ -258,7 +263,7 @@
             <li>
               <b>Facebook</b>
               <script type="text/javascript" id="facebook-jssdk"
-                      src="//connect.facebook.net/en_US/sdk.js#xfbml=1&amp;version=v2.3&amp;appId=367159160142267&amp;status=1&amp;cookie=1">
+                      src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&amp;version=v2.3&amp;appId=367159160142267&amp;status=1&amp;cookie=1">
               </script>
               <div class="fb-like" data-href="http://datamart.github.io/Komito/"
                    data-layout="button" data-action="like" data-show-faces="false"
@@ -312,7 +317,7 @@
                 <a href="http://www.apache.org/licenses/LICENSE-2.0"
                    rel="nofollow"
                    title="Apache License">Apache License 2.0</a>
-                <br>© 2015 <a href="http://dtm.io"
+                <br>© 2016 <a href="http://dtm.io"
                   title="Datamart Inc.">Datamart Inc.</a>
               </p>
             </div>
@@ -362,7 +367,7 @@ s.tl = function(lnk, linkType, linkName) {
 (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
 m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 ga('create','UA-5065160-14','auto');ga('require','displayfeatures');ga('send','pageview');
 </script>
 
