--- a/demo/index.html
+++ b/demo/index.html
@@ -372,6 +372,7 @@ ga('create','UA-5065160-14','auto');ga('require','displayfeatures');ga('send','p
 </script>
 
 <script>var _komito = {debugMode: 1};</script>
-<script src="//datamart.github.io/Komito/komito.js"></script>
+<!--script src="//datamart.github.io/Komito/komito.js"></script-->
+<script src="../../../master/Komito/min/komito.js"></script>
 </body>
 </html>
