--- a/v2.html
+++ b/v2.html
@@ -62,7 +62,7 @@
     <div class="kmt-page-content">
       <div class="kmt-section">
         <h2>Advanced Metrics</h2>
-        <p>Lorem ipsum text about Komito metrics.</p>
+        <p>Advanced Komito Analytics metrics.</p>
         <ul class="kmt-metrics">
           <li>
             <h3>Social interaction</h3>
