mocks has been added, demo page editions

--- a/demo/v2.html
+++ b/demo/v2.html
@@ -53,6 +53,7 @@
       <div class="kmt-section">
         <h2>Komito Analytics demo page</h2>
         <p>For more info please open default dev console view.(Keys, depends on OS, Browser)</p>
+        <p>Your wedev console should looks like this:</p>
         <div class="console"><img src="../images/chrome-webdev-console.png">&nbsp;</div>
         <h4>Print</h4>
         <div>Clicking on links "Print" event will be dispatched.</div>
