--- a/v2.html
+++ b/v2.html
@@ -95,11 +95,31 @@
         <h2>Cross-Compatible</h2>
         <p>We told, Komito Analytics is compatible with most popular analytics software.</p>
         <ul>
-          <li><img src="images/adobe-logo.png" alt="Adobe"></li>
-          <li><img src="images/baidu-logo.png" alt="Baidu"></li>
-          <li><img src="images/google-analytics-logo.png" alt="Google Analytics"></li>
-          <li><img src="images/clicktale-logo.png" alt="Clicktale"></li>
-          <li><img src="images/urchin-logo.png" alt="Urchin"></li>
+          <li>
+            <a target="_blank" rel="nofollow" title="Adobe Analytics"
+               href="//www.adobe.com/marketing-cloud/web-analytics.html">
+              <img src="images/adobe-logo.png" alt="Adobe"></a>
+          </li>
+          <li>
+            <a target="_blank" rel="nofollow" title="Baidu Analytics"
+               href="//tongji.baidu.com/">
+              <img src="images/baidu-logo.png" alt="Baidu"></a>
+          </li>
+          <li>
+            <a target="_blank" rel="nofollow" title="Google Analytics"
+               href="//www.google.com/analytics/">
+              <img src="images/google-analytics-logo.png" alt="Google Analytics"></a>
+          </li>
+          <li>
+            <a target="_blank" rel="nofollow" title="Clicktale"
+               href="//www.clicktale.com/">
+              <img src="images/clicktale-logo.png" alt="Clicktale"></a>
+          </li>
+          <li>
+            <a target="_blank" rel="nofollow" title="Urchin"
+               href="//support.google.com/urchin">
+              <img src="images/urchin-logo.png" alt="Urchin"></a>
+          </li>
         </ul>
       </div>
       <div class="kmt-section extra">
