--- a/demo/v2.html
+++ b/demo/v2.html
@@ -29,6 +29,9 @@
           <img src="../images/komito-logo.svg" alt="Komito Analytics">
         </a>
       </div>
+      <div class="hamburger">
+        <div class="hamburger-box"><div class="hamburger-inner"></div></div>
+      </div>
       <div class="kmt-navigation">
         <ul>
           <li>
@@ -84,5 +87,6 @@
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
   ga('create','UA-5065160-14','auto');ga('require','displayfeatures');ga('send','pageview');
   </script>
+  <script src="../scripts/functions.js"></script>
   <script src="//datamart.github.io/Komito/komito.js"></script>
 </body></html>
