--- a/integration/v2.html
+++ b/integration/v2.html
@@ -25,9 +25,7 @@
   <div class="kmt-page">
     <div class="kmt-page-header">
       <div class="kmt-logo">
-        <a href="/Komito/" title="Komito Homepage">
-          <img src="../images/komito-logo.svg" alt="Komito Analytics">
-        </a>
+        <a href="/Komito/" title="Komito Homepage"><svg version="1.1" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="45px" height="45px" viewBox="0 0 45 45"><polygon fill="#d02c00" points="0,0 0,20.1 19.8,0  "/><polygon fill="#fb8600" points="0,32 0,45 20.9,45 8.3,24.6   "/><polygon fill="#097AD2" points="33.6,45 45,45 45,0 32.3,0 14.6,18  "/></svg><span><b>Komito</b><i>Analytics</i></span></a>
       </div>
       <div class="hamburger">
         <div class="hamburger-box"><div class="hamburger-inner"></div></div>
@@ -174,15 +172,10 @@
       </div>
     </div>
     <div class="kmt-page-footer">
-      <div class="kmt-navigation">
-        <ul>
-          <li>
-            <a href="//github.com/Datamart/Komito/tree/master"
-               target="_blank"
-               title="Get Komito Analytics Source Code.">Get source code</a>
-          </li>
-        </ul>
-      </div>
+      <a href="http://dtm.io" title="Datamart Inc."
+         style="margin-top:1.6em"
+         class="dtm-logo"><svg version="1.1" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
+         width="33px" height="33px" viewBox="0 0 83 75"><path fill="#d61700" d="M41.008,0.938c9.558,0,18.338,3.321,25.255,8.87L29.338,2.652 C33.032,1.539,36.949,0.938,41.008,0.938L41.008,0.938z"/><path fill="#d61700" d="M78.159,25.45c0.784,1.833,1.438,3.736,1.947,5.696L36.787,80.062 l-21-66.474L78.159,25.45L78.159,25.45z"/><path fill="#d61700" d="M80.388,50.366C77.372,63.57,67.886,74.306,55.443,79.069L80.388,50.366L80.388,50.366z"/><path fill="#d61700" d="M21.163,76.523C8.896,69.589,0.612,56.431,0.612,41.333c0-6.387,1.484-12.427,4.124-17.796L21.163,76.523L21.163,76.523z"/></svg><span><i>Powered by</i><b>Datamart</b></span></a>
       <p>Komito Analytics is subject to the terms and conditions of
         <a href="http://www.apache.org/licenses/LICENSE-2.0"
            rel="nofollow"
