adobe analytics logo update

--- a/v2.html
+++ b/v2.html
@@ -96,7 +96,7 @@
           <li>
             <a target="_blank" rel="nofollow" title="Adobe Analytics"
                href="//www.adobe.com/marketing-cloud/web-analytics.html">
-              <img src="images/adobe-logo.png" alt="Adobe"></a>
+              <img src="images/adobe-analytics-logo.png" alt="Adobe"></a>
           </li>
           <li>
             <a target="_blank" rel="nofollow" title="Baidu Analytics"
