--- a/demo/v2.html
+++ b/demo/v2.html
@@ -53,11 +53,10 @@
     <div class="kmt-page-content">
       <div class="kmt-section">
         <h2>Komito Analytics demo page</h2>
-        <p>For more info please open default dev console view.(Keys, depends on OS, Browser)</p>
-        <p>Your wedev console should looks like this:</p>
-        <div class="console"><img src="../images/chrome-webdev-console.png">&nbsp;</div>
-        <h4>Print</h4>
-        <div>Clicking on links "Print" event will be dispatched.</div>
+        <p>For more info please open default dev console view. (Keys, depends on OS, Browser)</p>
+        <div class="console"><span>Your wedev console should looks like this:</span><img src="../images/chrome-webdev-console.png">&nbsp;</div>
+        <!-- <p>Your wedev console should looks like this:</p> -->
+        <p>Demo widgets coming soon</p>
       </div>
     </div>
     <div class="kmt-page-footer">
