--- a/v2.html
+++ b/v2.html
@@ -125,6 +125,8 @@
           <a href="integration/integration-v2.html"
              class="button"
              title="See Komito Analytics integration instructions. documentation">See integration instructions</a>
+          - OR -
+          <a href="#" class="button gray-out" title="Get Komito Analytics source code">Get source code</a>
         </p>
       </div>
       <div class="kmt-section notes">
